...
            android:layout_height="wrap_content"
            app:titleTextColor="@color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <EditText
        android:id="@+id/titleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleHolder" />

    <EditText
        android:id="@+id/usernameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="50dp"
        android:textColor="@color/white"
...
        android:layout_marginStart="50dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/white"
        android:theme="@style/Theme.AppCompat"
        app:hintEnabled="false"
        app:layout_constraintEnd_toStartOf="@+id/GeneratePassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordHolder"
        app:passwordToggleEnabled="true">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="10dp"
        android:rotation="90"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintBottom_toTopOf="@+id/urlTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usernameTextView"
        app:srcCompat="@drawable/baseline_autorenew_24" />

    <EditText
        android:id="@+id/urlTextView"
...
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/urlHolder" />

    <EditText
        android:id="@+id/notesTextView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:background="#30000000"
        android:paddingStart="10sp"
        android:textColor="@color/white"
...
        android:text="@string/notesEntry"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/urlTextView" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/updateEntryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="310dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/design_default_color_secondary"
        android:contentDescription="update"
...
