<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout4"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/BGColor"
    android:fitsSystemWindows="true"
    android:theme="@style/Theme.AppCompat"
    tools:context=".PasswordGeneratorActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/ToolbarBG"
        android:fitsSystemWindows="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/generatedPWTV"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/copyPW"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout2" />

    <ImageView
        android:id="@+id/generatePW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/generatePW_description"
        android:rotation="90"
        android:scaleX="1.5"
        android:scaleY="1.5"
        app:layout_constraintBottom_toTopOf="@+id/separator1"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/baseline_autorenew_24" />

    <ImageView
        android:id="@+id/copyPW"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@string/copyPW_description"
        android:scaleX="1.3"
        android:scaleY="1.3"
        app:layout_constraintBottom_toTopOf="@+id/separator1"
        app:layout_constraintEnd_toStartOf="@+id/generatePW"
        app:srcCompat="@drawable/baseline_content_copy_24" />

    <View
        android:id="@+id/separator1"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/generatedPWTV" />

    <TextView
        android:id="@+id/lengthTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/length"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator1" />

    <SeekBar
        android:id="@+id/seekBarPWlength"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:max="128"
        android:min="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/lengthNumTV"
        app:layout_constraintTop_toBottomOf="@+id/separator1" />

    <TextView
        android:id="@+id/lengthNumTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toEndOf="@+id/lengthTV"
        app:layout_constraintTop_toBottomOf="@+id/separator1" />

    <View
        android:id="@+id/separator2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekBarPWlength" />

    <TextView
        android:id="@+id/uppercaseTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/uppercase"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator2" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/uppercaseSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:text="@string/uppercase_switch"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator2" />

    <View
        android:id="@+id/separator3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/uppercaseSwitch" />

    <TextView
        android:id="@+id/lowercaseTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/lowercase"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator3" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/lowercaseSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:text="@string/lowercase_switch"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator3" />

    <View
        android:id="@+id/separator4"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lowercaseSwitch" />

    <TextView
        android:id="@+id/numbersTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/numbers"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator4" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/numbersSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:text="@string/numbers_switch"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator4" />

    <View
        android:id="@+id/separator5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/numbersSwitch" />

    <TextView
        android:id="@+id/specialCharsTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:text="@string/special_chars"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator5" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/specialCharsSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:layout_marginEnd="10dp"
        android:text="@string/special_chars_switch"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator5" />

    <View
        android:id="@+id/separator6"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/specialCharsSwitch" />

    <Button
        android:id="@+id/savePassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:backgroundTint="@color/design_default_color_secondary"
        android:text="@string/save_password"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/separator6" />
    

</androidx.constraintlayout.widget.ConstraintLayout>