...
            android:layout_height="wrap_content"
            app:titleTextColor="@color/white"/>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/newEntryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="310dp"
        android:layout_marginBottom="30dp"
        android:backgroundTint="@color/design_default_color_secondary"
        android:contentDescription="@string/newEntryButtonDesc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entriesRecyclerView"
        app:srcCompat="@android:drawable/ic_input_add" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/entriesRecyclerView"
        android:layout_width="409dp"
        android:layout_height="609dp"
...
